add a blog tree_build

--- a/source/_posts/2019-08-24-三维树木建模方法.md
+++ b/source/_posts/2019-08-24-三维树木建模方法.md
@@ -1,7 +1,7 @@
 ---
 title: 三维树木建模方法
 date: 2019-08-24 15:45:45
-tags: 图形学 建模
+tags: [图形学,建模]
 categories: 图形学
 ---
 这是我csdn上的一个[博文](https://blog.csdn.net/qq_31804159/article/details/80498452)
